[project]
name = "Artifact-BOXseven-Sonko"
version = "0.1.0"
dependencies = [
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "idna==3.10",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "urllib3==2.3.0",
  "websockets==15.0.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["macros", "tactics", "strategies", "utils", "scripts"]